--- a/app/src/main/res/layout/fragment_admin__search_fragment.xml
+++ b/app/src/main/res/layout/fragment_admin__search_fragment.xml
@@ -3,7 +3,59 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".admin.fragments.Admin_Search_fragment">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        >
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/event_name"
+            android:layout_marginTop="20dp"
+            android:layout_marginHorizontal="30dp"
+            android:textSize="20sp"
+            android:id="@+id/search_file_text_box"
+            android:inputType="textAutoComplete"
+            />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="20dp">
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/search_file_pdf"
+            android:text="@string/pdf"
+            android:textSize="20sp"
+            android:layout_marginEnd="20dp"
+            />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/search_file_excel"
+            android:text="@string/excel"
+            android:textSize="20sp"
+            />
+
+        </LinearLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/search_rv"
+            android:layout_marginHorizontal="20dp" />
+
+
+    </LinearLayout>
 
 </FrameLayout>
