--- a/app/src/main/res/layout/fragment_admin__search_fragment.xml
+++ b/app/src/main/res/layout/fragment_admin__search_fragment.xml
@@ -15,7 +15,7 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/event_name"
+            android:hint="@string/enter_event_name"
             android:layout_marginTop="20dp"
             android:layout_marginHorizontal="30dp"
             android:textSize="20sp"
