--- a/app/src/main/res/menu/home_page_menu.xml
+++ b/app/src/main/res/menu/home_page_menu.xml
@@ -10,8 +10,12 @@
         android:title="@string/search"
         android:icon="@drawable/baseline_manage_search_24"/>
 
+    <item android:id="@+id/event"
+        android:title="@string/event"
+        android:icon="@drawable/baseline_event_24"/>
+
     <item android:id="@+id/profile"
-        android:title="@string/search"
+        android:title="@string/profile"
         android:icon="@drawable/baseline_account_circle_24"/>
 
 </menu>
